fix: GetQuotesForm overflow and layout

--- a/src/components/Wallet/CrossChain/Swap/GetQuotesForm/GetQuotesForm.module.scss
+++ b/src/components/Wallet/CrossChain/Swap/GetQuotesForm/GetQuotesForm.module.scss
@@ -3,85 +3,94 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   height: 100%;
   padding-top: 40px;
-
-  .label {
-    display: block;
-    padding-left: 20px;
-    margin-bottom: 10px;
-    font-size: 14px;
-  }
-
-  .inputs {
-    position: relative;
+  
+  .body {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    overflow-y: auto;
+    margin-bottom: 30px;
 
-    .selectInput {
-      .selectIcon {
-        position: relative;
-        width: 20px;
-        height: 20px;
-        margin: 0 10px;
+    .label {
+      display: block;
+      padding-left: 20px;
+      margin-bottom: 10px;
+      font-size: 14px;
+    }
+
+    .inputs {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+
+      .selectInput {
+        .selectIcon {
+          position: relative;
+          width: 20px;
+          height: 20px;
+          margin: 0 10px;
+        }
+
+        &::before {
+          position: absolute;
+          top: 10px;
+          left: 20px;
+          width: 40px;
+          height: 40px;
+          content: '';
+          background-color: $c-titan-white;
+          opacity: 0.05;
+          border-radius: 12px;
+        }
       }
 
-      &::before {
+      .loading {
+        z-index: 49;
         position: absolute;
-        top: 10px;
-        left: 20px;
-        width: 40px;
-        height: 40px;
-        content: '';
-        background-color: $c-titan-white;
-        opacity: 0.05;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: $c-mirage;
         border-radius: 12px;
       }
-    }
 
-    .loading {
-      z-index: 49;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background-color: $c-mirage;
-      border-radius: 12px;
-    }
-  
-    .amountLabel {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-  
-      span {
-        opacity: 0.8;
+      .amountLabel {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        span {
+          opacity: 0.8;
+        }
       }
     }
-  }
 
-  .fromSection {
-    margin-bottom: 20px;
+    .fromSection {
+      margin-bottom: 20px;
 
-    .inputs {
-      gap: 40px;
+      .inputs {
+        gap: 40px;
+      }
     }
-  }
 
-  .separator {
-    width: 48px;
-    height: 48px;
-    align-self: center;
-    background-color: rgba($c-titan-white, 0.05);
-    border-radius: 12px;
-    transform: rotate(90deg);
-  }
+    .separator {
+      min-width: 48px;
+      min-height: 48px;
+      align-self: center;
+      flex: 1;
+      background-color: rgba($c-titan-white, 0.05);
+      border-radius: 12px;
+      transform: rotate(90deg);
+    }
 
-  .toSection {
-    .inputs {
-      gap: 10px;
+    .toSection {
+      .inputs {
+        gap: 10px;
+      }
     }
   }
 
@@ -90,7 +99,6 @@
     max-width: 400px;
     width: 100%;
     margin: 0 auto;
-    margin-top: 75px;
   }
 }
 
